# gtktranslate

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.html  README.md  build.rs  install.sh  uninstall.sh
data/: gtktranslate.desktop  resources.xml
info-other/: INFO.md
pkg/: PKGBUILD
src/: .gtktranslate.desktop.swp  .ui.rs.swp  about.rs  app_window.ui  app_window.ui~  gtktranslate.desktop  main.rs  textview_editable.ui  ui.rs  window.ui
src/gui/gtk3/: .mod.rs.swp  app_window.ui  app_window.ui~  mod.rs
translate-shell/: INFO.md  translate
translate-shell-info/: INFO.md
