[package]
name = "gtktranslate"
version = "0.4.0"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
keywords = ["libretranslate", "translate", "language", "gtk"]
description = "A GTK wrapper for libretranslate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk4-rs/", package = "gtk4" }
libretranslate = "0.5.0"